--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Судоку</title>
     <style>
         body {
@@ -16,6 +16,7 @@
             font-family: Arial, sans-serif;
             background-color: #f7f9fc;
             padding: 1rem; /* Добавьте немного отступа */
+            overflow: hidden; /* Убирает прокрутку по всей странице */
         }
         body.dark {
             background-color: #2b2b2b; /* Темный фон */
@@ -165,6 +166,23 @@ table {
     border-collapse: collapse;
     margin: 20px 0;
     border: 3px solid #000; /* Толстый контур вокруг таблицы */
+}
+
+/* Медиа-запрос для экранов менее 768 пикселей для лучшей адаптивности */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 36px; /* Уменьшение размера заголовка на мобильных устройствах */
+    }
+
+    td {
+        width: 30px; /* Уменьшение размера ячейки */
+        height: 30px;
+        font-size: 18px; /* Уменьшение шрифта */
+    }
+
+    #sudoku-board {
+        width: 90%; /* Ширина игрового поля 90% */
+    }
 }
 
 /* Медиа-запрос для экранов менее 420 пикселей */
@@ -440,13 +458,6 @@ table {
     cursor: pointer; /* Указатель при наведении */
 }
 
-.theme-switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin-top: 10px; /* Отступ сверху при необходимости */
-}
 
 .theme-switch input {
     opacity: 0;
@@ -455,14 +466,11 @@ table {
 }
 
 .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    width: 60px; /* Установите фиксированную ширину */
+    height: 34px; /* Установите высоту */
+    position: relative; /* Относительное позиционирование для правильного выравнивания */
+    overflow: hidden; /* Обрезаем лишнее содержимое */
     background-color: #ccc; /* Цвет фона при неактивном состоянии */
-    transition: .4s; /* Плавный переход */
     border-radius: 34px; /* Закругление краев */
 }
 
@@ -498,6 +506,26 @@ input:checked + .slider:before {
     transform: scale(0.95); /* Уменьшение размера */
 }
 
+.theme-switch {
+    display: flex;
+    align-items: center; /* Центрирует элементы по вертикали */
+    justify-content: center; /* Центрирует элементы по горизонтали */
+    margin-top: 10px; /* Отступ сверху */
+    width: 100%; /* Используйте 100% ширины контейнера */
+}
+.sun-icon {
+    width: 30px; /* Установите нужный размер */
+    height: 30px; /* Установите нужный размер */
+    margin-right: 0px; /* Отступ между иконкой солнца и слайдером */
+}
+
+.moon-icon {
+    width: 24px; /* Установите нужный размер */
+    height: 24px; /* Установите нужный размер */
+    margin-left: 10px; /* Отступ между слайдером и иконкой луны */
+}
+
+
     </style>
 </head>
 
@@ -512,8 +540,10 @@ input:checked + .slider:before {
         <button onclick="startGame('extreme')" class="difficulty-button">Экстремальный</button>
     </div>
     <label class="theme-switch">
+        <img src="sun.png" alt="Солнце" class="sun-icon" id="sun-icon"> <!-- Слева -->
         <input type="checkbox" id="theme-toggle" onchange="toggleTheme()">
         <span class="slider"></span>
+        <img src="moon.png" alt="Луна" class="moon-icon" id="moon-icon"> <!-- Справа -->
     </label>
 </div>
 
@@ -1003,14 +1033,18 @@ function drawGrid(board, grid)
     }
 }
 
-function checkWin() 
-{
+function checkWin() {
     const grid = getGridFromBoard(); // Получите текущее состояние сетки из игрового поля
-    if (grid.every(row => row.every(cell => cell !== null))) {
+    // Проверяем, все ли ячейки заполнены и верны
+    const isComplete = grid.every(row => row.every(cell => cell !== null));
+    const isCorrect = grid.every((row, rowIndex) => row.every((cell, colIndex) => {
+        return cell === solutionGrid[rowIndex][colIndex]; // Сравниваем с решением
+    }));
+
+    if (isComplete && isCorrect) {
         displayWinModal(); // Покажем модальное окно выигрыша
     }
 }
-
 function displayWinModal()
  {
     clearInterval(timerInterval); // Остановим таймер
