--- a/index.html
+++ b/index.html
@@ -820,6 +820,15 @@ function giveHint()
     {
         alert('Нет доступных пустых ячеек для подсказки!'); // Если нет пустых ячеек
     }
+
+    checkAdReady()
+                .then(() => {
+                    // Показать рекламу, если она готова
+                    showAd();
+                })
+                .catch(error => {
+                    console.error('Ошибка при проверке рекламы:', error);
+                });
 }
 
 function loseLife() 
