--- a/index.html
+++ b/index.html
@@ -654,25 +654,45 @@ function checkAndShowAd() {
     });
 }
 
-// Проверка готовности рекламы
-function checkAdReady() {
-            return vkBridge.send('VKWebAppCheckNativeAds', { ad_format: 'interstitial' });
-        }
+// Проверка готовности межэкранной рекламы
+function checkAdReadyInterstitial() {
+    return vkBridge.send('VKWebAppCheckNativeAds', { ad_format: 'interstitial' });
+}
 
-        // Показать рекламу
-        function showAd() {
-            return vkBridge.send('VKWebAppShowNativeAds', { ad_format: 'interstitial' })
-                .then((data) => {
-                    if (data.result) {
-                        console.log('Реклама показана');
-                    } else {
-                        console.log('Ошибка при показе рекламы');
-                    }
-                })
-                .catch((error) => {
-                    console.error('Ошибка при показе рекламы:', error);
-                });
-        }
+// Проверка готовности рекламы за вознаграждение
+function checkAdReadyReward() {
+    return vkBridge.send('VKWebAppCheckNativeAds', { ad_format: 'reward' });
+}
+
+// Показ межэкранной рекламы
+function showAdInterstitial() {
+    return vkBridge.send('VKWebAppShowNativeAds', { ad_format: 'interstitial' })
+        .then((data) => {
+            if (data.result) {
+                console.log('Межэкранная реклама показана');
+            } else {
+                console.log('Ошибка при показе межэкранной рекламы');
+            }
+        })
+        .catch((error) => {
+            console.error('Ошибка при показе межэкранной рекламы:', error);
+        });
+}
+
+// Показ рекламы за вознаграждение
+function showAdReward() {
+    return vkBridge.send('VKWebAppShowNativeAds', { ad_format: 'reward' })
+        .then((data) => {
+            if (data.result) {
+                console.log('Реклама за вознаграждение показана');
+            } else {
+                console.log('Ошибка при показе рекламы за вознаграждение');
+            }
+        })
+        .catch((error) => {
+            console.error('Ошибка при показе рекламы за вознаграждение:', error);
+        });
+}
 
 let timerInterval;
 let startTime;
@@ -789,14 +809,17 @@ function selectNumber(num)
 
 function giveHint() 
 {
-    checkAdReady()
-                .then(() => {
-                    // Показать рекламу, если она готова
-                    showAd();
-                })
-                .catch(error => {
-                    console.error('Ошибка при проверке рекламы:', error);
-                });
+        checkAdReadyReward()
+        .then(() => {
+            return showAdReward(); // Показать рекламу за вознаграждение
+        })
+        .then(() => {
+            // Логика предоставления подсказки после успешного показа рекламы 
+            console.log('Подсказка предоставлена!'); // Здесь разместите логику подсказки
+        })
+        .catch(error => {
+            console.error('Ошибка при проверке рекламы:', error);
+        });
     
     const emptyCells = []; // Массив для хранения пустых ячеек
 
@@ -909,14 +932,14 @@ function startGame(level) {
 
     checkAndShowAd();
 
-    checkAdReady()
-                .then(() => {
-                    // Показать рекламу, если она готова
-                    showAd();
-                })
-                .catch(error => {
-                    console.error('Ошибка при проверке рекламы:', error);
-                });
+    // Проверка межэкранной рекламы перед началом игры
+    checkAdReadyInterstitial()
+        .then(() => {
+            return showAdInterstitial(); // Показать межэкранную рекламу
+        })
+        .catch(error => {
+            console.error('Ошибка при проверке рекламы:', error);
+        });
 }
 
 function endGame() 
