--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ body.dark #sudoku-board td:nth-child(6) {
 
 
     td {
-        width: 40px;
-        height: 40px;
+        width: calc(100% / 9); /* Установите ширину ячейки как 1/9 от ширины таблицы */
+        height: calc(100% / 9); /* Установите высоту ячейки как 1/9 от высоты таблицы */
         text-align: center;
         border: 1px solid #999;
         font-size: 24px;                                                        
@@ -153,12 +153,12 @@ button {
     text-align: right; /* Добавьте это свойство */
 }
 
+/* Общие стили для игрового поля */
 #sudoku-board {
-    margin-top: 1px; /* Увеличьте отступ сверху для игрового поля */
-    width: 100%; /* Полная ширина по умолчанию */
-    max-width: 500px; /* Максимальная ширина поля */
-    margin-left: auto; /* Центрирование */
-    margin-right: auto; /* Центрирование */
+    width: 100%; /* Ширина игрового поля занимает 100% родительского элемента */
+    max-width: 400px; /* Установите максимальную ширину для основного экрана */
+    aspect-ratio: 1; /* Установите соотношение сторон 1:1 для квадратного поля */
+    margin: 0 auto; /* Центрирование */
 }
 
 table {
@@ -168,7 +168,7 @@ table {
     border: 3px solid #000; /* Толстый контур вокруг таблицы */
 }
 
-/* Медиа-запрос для экранов менее 768 пикселей для лучшей адаптивности */
+/* Медиа-запросы для адаптивности */
 @media (max-width: 768px) {
     h1 {
         font-size: 36px; /* Уменьшение размера заголовка на мобильных устройствах */
@@ -183,29 +183,47 @@ table {
     #sudoku-board {
         width: 90%; /* Ширина игрового поля 90% */
     }
+
+    #number-buttons {
+        width: 90%; /* Устанавливаем ширину панели с кнопками равной ширине игрового поля */
+    }
+
+    #number-buttons button {
+        font-size: 16px; /* Уменьшение размера шрифта для кнопок */
+    }
 }
 
 /* Медиа-запрос для экранов менее 420 пикселей */
 @media (max-width: 420px) {
     #sudoku-board {
-        width: 350px; /* Устанавливаем фиксированную ширину для узких экранов */
-        margin-left: auto; /* Центрирование */
-        margin-right: auto; /* Центрирование */
+        width: 390px; /* Устанавливаем фиксированную ширину для узких экранов */
     }
 
     td {
-        width: 30px; /* Пример изменения по желанию */
-        height: 30px; /* Пример изменения по желанию */
         font-size: 20px; /* Пример изменения по желанию */
+    }
+
+    #number-buttons {
+        width: 350px; /* Ширина панели с кнопками равна ширине игрового поля */
+    }
+
+    #number-buttons button {
+        font-size: 14px; /* Уменьшение размера шрифта для кнопок */
     }
 }
 
 /* Медиа-запрос для экранов менее 360 пикселей */
 @media (max-width: 360px) {
     #sudoku-board {
-        width: 320px; /* Устанавливаем фиксированную ширину для еще более узких экранов */
-        margin-left: auto; /* Центрирование */
-        margin-right: auto; /* Центрирование */
+        width: 340px; /* Устанавливаем фиксированную ширину для еще более узких экранов */
+    }
+
+    #number-buttons {
+        width: 320px; /* Ширина панели с кнопками равна ширине игрового поля */
+    }
+
+    #number-buttons button {
+        font-size: 12px; /* Уменьшение размера шрифта для кнопок */
     }
 }
 
@@ -231,11 +249,23 @@ table {
             transition: background-color 0.3s;
         }
 
-        #number-buttons {
-            display: flex;
-            flex-wrap: wrap; /* Позвоняет кнопкам переходить на новые строки */
-            justify-content: center; /* Центрируем кнопки */
-        }
+/* Стили для кнопок с цифрами и кнопки стирания */
+#number-buttons {
+    display: flex; /* Используйте flexbox для выравнивания кнопок */
+    justify-content: space-between; /* Размещает кнопки с равномерным расстоянием между ними */
+    width: 100%; /* Полная ширина контейнера для кнопок */
+    margin: 20px auto 0; /* Центрируем контейнер и добавляем отступ сверху */
+}
+
+/* Общие стили для кнопок */
+#number-buttons button {
+    flex: 1; /* Каждая кнопка будет занимать равную долю доступного пространства */
+    min-width: 20px; /* Минимальная ширина кнопки для удобства на маленьких экранах */
+    max-width: 50px; /* Максимальная ширина кнопки для ограничения размера */
+    height: 40px; /* Установите фиксированную высоту для кнопок */
+    font-size: 18px; /* Размер шрифта кнопок */
+    margin: 0 5px; /* Параметры отступа между кнопками */
+}
 
 .number-btn {
     width: 30px;                        
