--- a/index.html
+++ b/index.html
@@ -168,28 +168,18 @@ table {
     border: 3px solid #000; /* Толстый контур вокруг таблицы */
 }
 
-/* Медиа-запросы для адаптивности */
+/* Медиа-запросы для экранов менее 768 пикселей для лучшей адаптивности */
 @media (max-width: 768px) {
     h1 {
         font-size: 36px; /* Уменьшение размера заголовка на мобильных устройствах */
     }
 
     td {
-        width: 30px; /* Уменьшение размера ячейки */
-        height: 30px;
         font-size: 18px; /* Уменьшение шрифта */
     }
 
     #sudoku-board {
         width: 90%; /* Ширина игрового поля 90% */
-    }
-
-    #number-buttons {
-        width: 90%; /* Устанавливаем ширину панели с кнопками равной ширине игрового поля */
-    }
-
-    #number-buttons button {
-        font-size: 16px; /* Уменьшение размера шрифта для кнопок */
     }
 }
 
@@ -202,28 +192,12 @@ table {
     td {
         font-size: 20px; /* Пример изменения по желанию */
     }
-
-    #number-buttons {
-        width: 350px; /* Ширина панели с кнопками равна ширине игрового поля */
-    }
-
-    #number-buttons button {
-        font-size: 14px; /* Уменьшение размера шрифта для кнопок */
-    }
 }
 
 /* Медиа-запрос для экранов менее 360 пикселей */
 @media (max-width: 360px) {
     #sudoku-board {
-        width: 340px; /* Устанавливаем фиксированную ширину для еще более узких экранов */
-    }
-
-    #number-buttons {
-        width: 320px; /* Ширина панели с кнопками равна ширине игрового поля */
-    }
-
-    #number-buttons button {
-        font-size: 12px; /* Уменьшение размера шрифта для кнопок */
+        width: 320px; /* Устанавливаем фиксированную ширину для еще более узких экранов */
     }
 }
 
@@ -249,23 +223,12 @@ table {
             transition: background-color 0.3s;
         }
 
-/* Стили для кнопок с цифрами и кнопки стирания */
-#number-buttons {
-    display: flex; /* Используйте flexbox для выравнивания кнопок */
-    justify-content: space-between; /* Размещает кнопки с равномерным расстоянием между ними */
-    width: 100%; /* Полная ширина контейнера для кнопок */
-    margin: 20px auto 0; /* Центрируем контейнер и добавляем отступ сверху */
-}
-
-/* Общие стили для кнопок */
-#number-buttons button {
-    flex: 1; /* Каждая кнопка будет занимать равную долю доступного пространства */
-    min-width: 20px; /* Минимальная ширина кнопки для удобства на маленьких экранах */
-    max-width: 50px; /* Максимальная ширина кнопки для ограничения размера */
-    height: 40px; /* Установите фиксированную высоту для кнопок */
-    font-size: 18px; /* Размер шрифта кнопок */
-    margin: 0 5px; /* Параметры отступа между кнопками */
-}
+        #number-buttons {
+            margin-top: 20px; /* Добавьте отступ сверху */
+            display: flex;
+            flex-wrap: wrap; /* Позвоняет кнопкам переходить на новые строки */
+            justify-content: center; /* Центрируем кнопки */
+        }
 
 .number-btn {
     width: 30px;                        
