--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ body.dark #sudoku-board td:nth-child(6) {
 
 
     td {
-        width: calc(100% / 9); /* Установите ширину ячейки как 1/9 от ширины таблицы */
-        height: calc(100% / 9); /* Установите высоту ячейки как 1/9 от высоты таблицы */
+        width: 40px;
+        height: 40px;
         text-align: center;
         border: 1px solid #999;
         font-size: 24px;                                                        
@@ -153,12 +153,12 @@ button {
     text-align: right; /* Добавьте это свойство */
 }
 
-/* Общие стили для игрового поля */
 #sudoku-board {
-    width: 100%; /* Ширина игрового поля занимает 100% родительского элемента */
-    max-width: 400px; /* Установите максимальную ширину для основного экрана */
-    aspect-ratio: 1; /* Установите соотношение сторон 1:1 для квадратного поля */
-    margin: 0 auto; /* Центрирование */
+    margin-top: 1px; /* Увеличьте отступ сверху для игрового поля */
+    width: 100%; /* Полная ширина по умолчанию */
+    max-width: 500px; /* Максимальная ширина поля */
+    margin-left: auto; /* Центрирование */
+    margin-right: auto; /* Центрирование */
 }
 
 table {
@@ -168,13 +168,15 @@ table {
     border: 3px solid #000; /* Толстый контур вокруг таблицы */
 }
 
-/* Медиа-запросы для экранов менее 768 пикселей для лучшей адаптивности */
+/* Медиа-запрос для экранов менее 768 пикселей для лучшей адаптивности */
 @media (max-width: 768px) {
     h1 {
         font-size: 36px; /* Уменьшение размера заголовка на мобильных устройствах */
     }
 
     td {
+        width: 30px; /* Уменьшение размера ячейки */
+        height: 30px;
         font-size: 18px; /* Уменьшение шрифта */
     }
 
@@ -186,10 +188,14 @@ table {
 /* Медиа-запрос для экранов менее 420 пикселей */
 @media (max-width: 420px) {
     #sudoku-board {
-        width: 390px; /* Устанавливаем фиксированную ширину для узких экранов */
+        width: 350px; /* Устанавливаем фиксированную ширину для узких экранов */
+        margin-left: auto; /* Центрирование */
+        margin-right: auto; /* Центрирование */
     }
 
     td {
+        width: 30px; /* Пример изменения по желанию */
+        height: 30px; /* Пример изменения по желанию */
         font-size: 20px; /* Пример изменения по желанию */
     }
 }
@@ -198,6 +204,8 @@ table {
 @media (max-width: 360px) {
     #sudoku-board {
         width: 320px; /* Устанавливаем фиксированную ширину для еще более узких экранов */
+        margin-left: auto; /* Центрирование */
+        margin-right: auto; /* Центрирование */
     }
 }
 
@@ -224,7 +232,6 @@ table {
         }
 
         #number-buttons {
-            margin-top: 20px; /* Добавьте отступ сверху */
             display: flex;
             flex-wrap: wrap; /* Позвоняет кнопкам переходить на новые строки */
             justify-content: center; /* Центрируем кнопки */
